# foc

./: .gitignore  .mxproject
circuit/candence/: HPM_ECAT_FOC.DSN  hpm_ecat_foc.opj
code/: .mxproject  CMakeLists.txt  board.cfg
code/application/: CMakeLists.txt  FastMath.h  LUT.h  application.cpp  application.h  foc.cpp  foc.h  main.cpp  math_ops.h  open_loop_controller.cpp  open_loop_controller.h  position_sensor.cpp  position_sensor.h  velocityPositionLoopController.cpp  velocityPositionLoopController.h  vofa_plus.c  vofa_plus.h
code/application/calibration/: calibration.c  calibration.h  currentCalibration.cpp  currentCalibration.h
code/application/comnunication/: serial_logger.c  serial_logger.cpp  serial_logger.h  serial_modbus.c
code/application/loop/: currentControl.cpp  currentControl.h  open_loop_controller.cpp  open_loop_controller.h  velocityPositionLoopController.cpp  velocityPositionLoopController.h
code/application/math/: FastMath.c  math_ops.c
code/board/: .mxproject  CMakeLists.txt  foc.ioc
code/board/Core/Inc/: main.h  stm32f4xx_it.h  tim.h
code/board/Core/Src/: adc.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
code/board/cmake/: gcc-arm-none-eabi.cmake
code/board/cmake/stm32cubemx/: CMakeLists.txt
code/board/foc/: CMakeLists.txt  STM32F405XX_FLASH.ld
code/board/foc/cmake/: gcc-arm-none-eabi.cmake
code/board/foc/cmake/stm32cubemx/: CMakeLists.txt
code/drivers/AS5047/: AS5047.c  AS5047.h  CMakeLists.txt
code/drivers/drv8301/: CMakeLists.txt  delay.c  delay.h  drv8301.cpp  drv8301.h
